test/fail/syntax_error/unrecognized_character.amla
func main() int {
     ğŸ˜€ = 3
}